src/index.css
@keyframes fadeInOut {
  0% {
    opacity: 1;
  }
  20% {
    opacity: 0;
  }
  40% {
    opacity: 1;
  }
  100% {
    opacity: 1;
  }
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
html,
body {
  height: 100dvh;
  width: 100%;
}
.background {
  object-fit: cover;
  position: absolute;
  z-index: -1;
  height: 100dvh;
  width: 100%;
}
.pageContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 1;
  height: 100dvh;
  width: 100%;
}

.gameContainer {
  background-image: url(/public/gameboardBackground.webp);
  background-position: center;
  background-size: contain;
  opacity: 0;
  visibility: hidden;
  display: grid;
  border-radius: 14px;
  background-color: rgba(57, 57, 57, 0.299);
  place-items: center;
  aspect-ratio: 1;
  width: 40%;
  transform: translate(-20%);
  transition: opacity 2s ease-in-out;
  &.firstRound {
    grid-template-columns: repeat(4, 1fr);
  }
  &.secondRound {
    background-size: cover;
    background-position: center;
    grid-template-columns: repeat(4, 1fr);
    aspect-ratio: none;
    height: 90%;
  }
  &.thirdRound {
    grid-template-columns: repeat(5, 1fr);
  }
}
.gameContainer.hidden {
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}
.gameContainer.visible {
  opacity: 1;
  visibility: visible;
}

.cardContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  width: 84%;
  aspect-ratio: 0.7;
  position: relative;
  perspective: 1000px;
  margin: auto;
  &.secondRound {
    height: 96%;
    /* width: 84%; */
  }
}

.card {
  max-width: 100%;
  aspect-ratio: 0.7;
  height: 100%;
  position: relative;
  transform-style: preserve-3d;
  transition: transform 0.6s ease-in-out;
}

.card.flipped {
  transform: rotateY(180deg);
}

.front,
.back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  img {
    max-width: 100%;
  }
}

.front {
  transform: rotateY(0deg);
}

.back {
  transform: rotateY(180deg);
}

.betweenRoundDiv {
  position: relative;
  width: 100%;
  height: 100%;
}
.winVideo {
  object-fit: cover;
  position: absolute;
  z-index: -1;
  height: 100%;
  width: 100%;
}
.winButton {
  border-style: double;
  position: absolute;
  color: white;
  background-color: black;
  width: 20%;
  height: 5%;
  &.firstRound {
    right: 5%;
    bottom: 28%;
  }
  &.secondRound {
    left: 5%;
    top: 40%;
  }
  &.thirdRound {
    top: 50%;
    left: 7%;
  }
}

.loseVideo {
  z-index: -1;
  position: absolute;
  object-fit: cover;
  height: 100%;
  width: 100%;
}

.loseGameBtn {
  border-style: double;
  position: absolute;
  color: white;
  background-color: black;
  width: 40%;
  height: 5%;
  bottom: 5%;
}

.loadingContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 20%;
  height: 20%;
  gap: 8%;
  transform: translate(60%);
}
.loadingHeader {
  font-size: 4rem;
  animation-name: fadeInOut;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
  opacity: 1;
  transition: 3s ease-out;
}
.loadingHeader.hidden {
  opacity: 0;
  animation: none;
}
.startButton {
  opacity: 1;
  font-size: 1.4em;
  border-style: double;
  color: white;
  background-color: black;
  width: 60%;
  height: 20%;
  bottom: 5%;
  transition: 2s ease-in;
}

.startButton.hidden {
  opacity: 0;
}

.startButton.active {
  opacity: 1;
}

.strikeChances {
  border-radius: 8px;
  opacity: 0;
  visibility: hidden;
  border: 2px double white;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.235);
  width: 10%;
  height: 10%;
  position: absolute;
  /* transform: translate(-1250%, -550%); */
  transform: translate(-350%, -50%);
  transition: opacity 2s ease-in;
}

.strikeChances.hidden {
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}
.strikeChances.visible {
  opacity: 1;
  visibility: visible;
}

.strikes {
  font-size: 3rem;
}

.muteButton {
  border-radius: 50%;
  border: 2px double;
  background-color: rgba(0, 0, 0, 0.24);
  bottom: 5%;
  left: 3%;
  position: absolute;
  aspect-ratio: 1;
  height: 4%;
  width: auto;
  /* transform: translate(-730%, 100%); */
  &:active {
    background-color: white;
    color: black;
    border: none;
  }
}

@media (max-width: 1024px) {
  .background {
    object-position: 70%;
  }
  .loadingContainer {
    transform: translate(196%);
  }
  .startButton {
    width: 15rem;
  }
  .gameContainer {
    width: 99%;
    transform: translate(0);
    &.secondRound {
      transform: translate(0%, -5%);
    }
  }

  .strikeChances {
    transform: translate(0%, 640%);
    width: 20%;
    height: 7%;
  }
  .muteButton {
    bottom: 2%;
  }
}

@media (max-width: 500px) {
  .gameContainer {
    place-items: center;
    max-height: 70%;
  }
  .startButton {
    height: 8%;
    width: 60%;
  }
  .winButton {
    height: 10%;
    width: 25%;
  }
  .loadingContainer {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    transform: translate(0%);
  }
  .loseGameBtn {
    height: 12%;
  }

  .strikeChances {
    width: 28%;
    height: 8%;
    transform: translate(0%, 505%);
  }
  .muteButton {
    top: 2%;
    width: 60px;
    height: 60px;
  }
}

